# digit

./: .gitignore  README  app.json  docker-compose.dev.yml  docker-compose.yml  heroku.Dockerfile  heroku.yml  pyproject.toml
abb/: abb_api.py  admin.py  apps.py  models.py  serializers.py  views.py
abb/migrations/: 0001_initial.py  0002_alter_motionasset_assettypeversion.py  0003_alter_motionasset_assetfamily_and_more.py  0004_alter_motionasset_assetowner_and_more.py
backend/: Dockerfile  Makefile  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backend/docker/: Dockerfile.dev  docker-entrypoint.sh
backend/src/digit/abb/: abb_api.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/digit/abb/migrations/: 0001_initial.py  0005_alter_site_options.py
backend/src/digit/api/: serializers.py  urls.py  views.py
backend/src/digit/config/: asgi.py  urls.py  wsgi.py
backend/src/digit/config/settings/: base.py  dev.py
core/: settings.py  urls.py
core/settings/: base.py
deploy/heroku/: README.md  entry.sh  nginx.conf  settings.py  supervisor.conf
media/: nginx.conf
web-frontend/: Dockerfile  package-lock.json  package.json
web-frontend/docker/: Dockerfile.dev
web-frontend/src/: App.tsx
web-frontend/src/components/: AssetData.tsx  Breadcrumbs.tsx  Copyright.tsx  MeasurementChart.tsx  MeasurementsTable.tsx  PageLoader.tsx  SiteAssetsGrid.tsx  SiteGrid.tsx
web-frontend/src/containers/: Base.tsx  Dashboard.tsx  SignIn.tsx  sidebarItems.tsx
web-frontend/src/utils/: fetcher.ts  titleContext.ts
